--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
 </head>
 <body>
 
+  <header class="shadow-lg p-3 mb-5 bg-white rounded">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+      <a class="navbar-brand" href="#">
+        <img src="images/logo3.png" width="150" height="150" alt="" loading="lazy" class="logoNav" >
+      </a>
+
+      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
+        <span class="navbar-toggler-icon "></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item mx-auto">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+
+          <li class="nav-item mx-auto ">
+            <a class="nav-link" href="#">Canchas</a>
+          </li>
+
+          <li class="nav-item mx-auto ">
+            <a class="nav-link" href="#">Cantina</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div  class="container">
+    <div class="jumbotron">
+     <img src="images/frente.jpg" alt="figura cualquiera" class="img-fluid">
+    </div>
+  </div>  
+
 
 
     
