algunos cambios css

--- a/canchas.html
+++ b/canchas.html
@@ -41,25 +41,25 @@
     </nav>
   </header>
 
-  <h1>Canchas de futbol</h1>
-  <section >
+  <h1 id="tituloC">Canchas de futbol</h1>
+  <section class="grilla" >
    <div class="container">
     <div class="row mb-4"><!--margin bottom 4/ clase de bootstrap-->
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a href="images2/1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-          <img class="mx-auto d-block " src="images2/1.jpg" width="300" height="300">
+          <img class="mx-auto d-block " src="images2/1.jpg" width="250" height="250">
         </a>
 
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a href="images2/2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-          <img class="mx-auto d-block " src="images2/2.jpg" width="300" height="300">
+          <img class="mx-auto d-block " src="images2/2.jpg" width="250" height="250">
         </a>
 
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a href="images2/3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-          <img class="mx-auto d-block " src="images2/3.jpg" width="300" height="300">
+          <img class="mx-auto d-block " src="images2/3.jpg" width="250" height="250">
         </a>
 
       </div>  
@@ -67,19 +67,19 @@
     <div class="row mb-4">
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a href="images2/4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-          <img class="mx-auto d-block " src="images2/4.jpg" width="300" height="300">
+          <img class="mx-auto d-block " src="images2/4.jpg" width="250" height="250">
         </a>
  
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a href="images2/5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-          <img class="mx-auto d-block " src="images2/5.jpg" width="300" height="300">
+          <img class="mx-auto d-block " src="images2/5.jpg" width="250" height="250">
         </a>
 
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a href="images2/6.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-          <img class="mx-auto d-block " src="images2/6.jpg" width="300" height="300">
+          <img class="mx-auto d-block " src="images2/6.jpg" width="250" height="250">
         </a>
 
       </div>  
