--- a/cantina.html
+++ b/cantina.html
@@ -41,8 +41,8 @@
     </nav>
   </header>
 
-  <h1>Cantina</h1>
-  <section >
+  <h1 id="tituloC">Cantina</h1>
+  <section class="grilla">
    <div class="container">
     <div class="row mb-4"><!--margin bottom 4/ clase de bootstrap-->
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
